--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,41 @@
-# AI API Keys and Secrets
-backend/.env
-.env
-.env.local
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-backend/venv/
-venv/
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Node
-node_modules/
-frontend/node_modules/
-.next/
-frontend/.next/
-out/
-build/
-dist/
+# testing
+/coverage
 
-# Logs and OS files
-*.log
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
